--- a/lojadoces.html
+++ b/lojadoces.html
@@ -17,7 +17,7 @@ Temos paçocas tradicionais e gourmet!!! </h3>
 <p>Paçoca quebra queixo..................................R$12,00 </p>
 <p>Paçoca do Moises........................................R$14,00 </p>
 <p> <strong> Acesse nossas rede socias e conheça mais dessas delicia </strong> 
-<a>@Tech4doces </a> </p>
+<a href="https://github.com/wagnermurath/murath2023/blob/main/lojadoces.html"> @Tech4doces </a> </p>
 
 </body>
 </html>
